refactor: response structure
