# internal/docs/swagger.json
@@ -30,25 +30,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.GuildSettings"
+                            "$ref": "#/definitions/models.APIResponse-GuildSettings"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     }
                 }
@@ -83,13 +83,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     }
                 }
@@ -125,19 +125,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MemberProfile"
+                            "$ref": "#/definitions/models.APIResponse-MemberProfile"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     }
                 }
@@ -183,19 +183,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MemberProfile"
+                            "$ref": "#/definitions/models.APIResponse-MemberProfile"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     }
                 }
@@ -231,19 +231,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MemberProfile"
+                            "$ref": "#/definitions/models.APIResponse-MemberProfile"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     }
                 }
@@ -287,19 +287,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MemberProfile"
+                            "$ref": "#/definitions/models.APIResponse-MemberProfile"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     }
                 }
@@ -328,25 +328,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.GuildSettings"
+                            "$ref": "#/definitions/models.APIResponse-GuildSettings"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.GenericResponse"
+                            "$ref": "#/definitions/models.APIResponse-ErrorResponse"
                         }
                     }
                 }
@@ -371,6 +371,39 @@
         }
     },
     "definitions": {
+        "models.APIResponse-ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/models.ErrorResponse"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.APIResponse-GuildSettings": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/models.GuildSettings"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.APIResponse-MemberProfile": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/models.MemberProfile"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.ActivityConfig": {
             "type": "object",
             "properties": {
@@ -428,15 +461,11 @@
                 "CardStyleDefault"
             ]
         },
-        "models.GenericResponse": {
+        "models.ErrorResponse": {
             "type": "object",
             "properties": {
-                "data": {},
                 "message": {
                     "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
                 }
             }
         },
